Mi primer commit

--- a/html.html
+++ b/html.html
@@ -30,12 +30,12 @@
 <center>
   <table id="tabla">
     <tr>
-    <td   style="background-color: white ">Elementos</td>
-    <td   style="background-color: white ">Descripcion</td>
+    <td   style="background-color: white ">filauno</td>
+    <td   style="background-color: white ">filados</td>
     </tr>
     <tr>
-      <td   style="background-color: white">Prueba</td>
-      <td id="ejemplo"  style="background-color: white">aqui ira otro texto.</td>
+      <td   style="background-color: white">1</td>
+      <td id="ejemplo"  style="background-color: white">2</td>
     </tr>
     </table>
 </center>
